--- a/src/scss/theme/_variables.scss
+++ b/src/scss/theme/_variables.scss
@@ -63,6 +63,10 @@ $z-index-quick-nav: 1000;
 $z-index-navigation: 1040;
 $z-index-menu: 1080;
 
+// media screen sizes
+
+$screen-xs-max: 767px;
+
 // $screen-sm-min: 768px;
 // // We willen op tablet portrait nog mobiel tonen.
 // $screen-sm-min: 769px;
